# vtk-slice3d

./: .gitignore  LICENSE  README.md  pyproject.toml
slice3d/: __init__.py  slice3d.py
