[project]
name = "vtk-slice3d"
version = "0.2.0"
description = "3D slice visualization with VTK"
authors = [{name="Taihui Yang"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = ["matplotlib", "numpy", "quaternion", "vtk"]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/YangTaihui/vtk-slice3d"